--- a/templates/customer_detail.html
+++ b/templates/customer_detail.html
@@ -11,7 +11,7 @@
     <p><a class="btn btn-primary" href="/{{ customer.id }}/edit/">Edit</a></p>
 
     <h2>Reservations</h2>
-    {% if reservations %}
+    {% if reservations.length!==0 %}
     <ul>
       {% for reservation in reservations %}
       <li>
